Change name of repository and Go module

--- a/config.json
+++ b/config.json
@@ -41,7 +41,7 @@
                     "handler": "headers",
                     "response": {
                       "set": {
-                        "Server": ["poc-caddy-cs-bouncer"]
+                        "Server": ["caddy-cs-bouncer"]
                       }
                     }
                   }
