--- a/config.json
+++ b/config.json
@@ -10,6 +10,11 @@
         }
     },
     "apps": {
+      "crowdsec": {
+        "api_key": "<apikey>",
+        "api_url": "http://127.0.0.1:8080/",
+        "ticker_interval": "10s"
+      },
       "http": {
         "http_port": 9080,
         "https_port": 9443,
