Add example Caddy configuration for outputting Nginx log format
CrowdSec can read Nginx logs. The current setup may or may not
work on your machine with Docker, but the logs in logs/access.log
should be readable by CrowdSec in case the file is available
to be read by CrowdSec.

--- a/config.json
+++ b/config.json
@@ -6,7 +6,21 @@
                 "writer": {
                   "output": "stderr"
                 }
-            }
+            },
+            "access": {
+              "level": "DEBUG",
+              "writer": {
+                "output": "file",
+                "filename": "./logs/access.log"
+              },
+              "encoder": {
+                "format": "formatted",
+                "template": "{common_log} \"{request>headers>Referer>[0]}\" \"{request>headers>User-Agent>[0]}\""
+              },
+              "include": [
+                "http.log.access.access"
+              ]
+          }
         }
     },
     "apps": {
@@ -81,7 +95,9 @@
                 ]
               }
             ],
-            "logs": {}
+            "logs": {
+              "default_logger_name": "access"
+            }
           }
         }
       },
