--- a/config.json
+++ b/config.json
@@ -28,7 +28,8 @@
         "api_key": "<api_key>",
         "api_url": "http://127.0.0.1:8080/",
         "ticker_interval": "10s",
-        "enable_streaming": true
+        "enable_streaming": true,
+        "enable_hard_fails": false
       },
       "layer4": {
         "servers": {
