--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,8 @@ jobs:
         run: |
           curl -sL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh |
               sh -s -- -b $HOME/go/bin v1.37.1
-          $HOME/go/bin/golangci-lint run --max-issues-per-linter 0 \
+          $HOME/go/bin/golangci-lint run --timeout=30m \
+                                         --max-issues-per-linter 0 \
                                          --max-same-issues 0 \
                                          -E exportloopref \
                                          -E gocritic \
