--- a/docker/config.json
+++ b/docker/config.json
@@ -88,7 +88,7 @@
                     "handler": "headers",
                     "response": {
                       "set": {
-                        "Server": ["caddy-cs-bouncer"]
+                        "Server": ["caddy-cs-bouncer-example-server"]
                       }
                     }
                   }
