Add logging potentially missing modules are detected
If the shared `crowdsec` module is compiled into Caddy, but either
the `http` or `layer4` CrowdSec bouncer modules are not available
when they most likely should be, emit warning logs on startup.

--- a/Caddyfile
+++ b/Caddyfile
@@ -1,14 +1,17 @@
 {
-    debug
-    crowdsec {
-        api_url http://localhost:8080
-        api_key <api_key>
-    }
+	log {
+		level DEBUG
+	}
+	crowdsec {
+		api_url http://localhost:7080
+		api_key {env.CROWDSEC_API_KEY}
+		ticker_interval 3s
+	}
 }
 
 localhost {
-    route {
-        crowdsec
-        respond "Allowed by CrowdSec!"
-    }
+	route {
+		crowdsec
+		respond "Allowed by CrowdSec!"
+	}
 }
