--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -12,7 +12,7 @@ RUN xcaddy build \
     --with github.com/mholt/caddy-l4 \
     --with github.com/caddyserver/transform-encoder \
     --with github.com/hslatman/caddy-crowdsec-bouncer/http@main \
-    --with github.com/hslatman/caddy-crowdsec-bouncer/appsec@main \
+    #--with github.com/hslatman/caddy-crowdsec-bouncer/appsec@main \
     --with github.com/hslatman/caddy-crowdsec-bouncer/layer4@main
 
 FROM caddy:${CADDY_VERSION} AS caddy
@@ -22,4 +22,4 @@ WORKDIR /
 COPY --from=builder /usr/bin/caddy /usr/bin/caddy
 COPY config.json /etc/caddy/config.json
 
-CMD ["/usr/bin/caddy", "run", "-config=/etc/caddy/config.json"]
+CMD ["/usr/bin/caddy", "run", "--config=/etc/caddy/config.json"]
